@startuml

class Pyramide {
    - std::vector<const Carte*> array_cartes[4]

    + Pyramide()
    + ~Pyramide()
    + estVide(): bool
    + remplirPyramide()
    + remplircasePyramide()
    + reserverCarte()
    + acheterCarte()
}

class EspaceJeux {
    - LotDeJetons *lotJetons
    - LotPrivileges *lotPrivileges
    - Sac *sac
    - Plateau *plateau
    - JeuCarte *jeuxCartes
    - Pioche *piocheNv1
    - Pioche *piocheNv2
    - Pioche *piocheNv3
    - Pioche *piocheNoble
    - Pyramide *pyramide

    + EspaceJeux()
    + ~EspaceJeux()
}


Partie *--- EspaceJeux
Partie *--"2" Joueur

EspaceJeux *---"1" Sac
EspaceJeux *---"1" Pyramide
EspaceJeux *---"1" Plateau
EspaceJeux *---"1" LotDeJetons
EspaceJeux *---"1" LotPrivileges
EspaceJeux *--"1" JeuCarte
Pioche "4"-* EspaceJeux

@enduml